--- a/package.json
+++ b/package.json
@@ -3,25 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@clayui/css": "^3.52.0",
-    "@clayui/form": "^3.52.0",
-    "@clayui/loading-indicator": "^3.40.0",
-    "@clayui/modal": "^3.52.0",
-    "@clayui/pagination-bar": "^3.52.0",
-    "@clayui/table": "^3.40.0",
-    "@clayui/tabs": "^3.52.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.0.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.0",
+    "source-map-loader": "^4.0.1",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.18"
   },
